--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-av": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
