--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -20,7 +20,8 @@
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-router-native": "^6.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
