--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/material-top-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
     "expo": "~47.0.9",
     "expo-av": "~13.0.2",
     "expo-status-bar": "~1.4.2",
@@ -21,7 +24,9 @@
     "react-native-animatable": "^1.3.3",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-router-native": "^6.6.1"
+    "react-redux": "^8.0.5",
+    "react-router-native": "^6.6.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
