--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -19,6 +19,7 @@
     "expo": "~47.0.9",
     "expo-av": "~13.0.2",
     "expo-status-bar": "~1.4.2",
+    "jwt-decode": "^3.1.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
