--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -18,13 +18,17 @@
     "axios": "^1.2.2",
     "expo": "~47.0.9",
     "expo-av": "~13.0.3",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.6.11",
     "jwt-decode": "^3.1.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "11.23.1",
     "react-redux": "^8.0.5",
     "react-router-native": "^6.6.1",
     "redux-persist": "^6.0.0"
