--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -25,6 +25,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-calendars": "^1.1293.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
