--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
@@ -26,7 +27,9 @@
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
     "react-native-calendars": "^1.1293.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "^3.0.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.23.1",
