--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -27,9 +27,10 @@
     "react-native": "0.70.5",
     "react-native-animatable": "^1.3.3",
     "react-native-calendars": "^1.1293.0",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-paper": "^5.3.1",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-reanimated": "^3.0.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.23.1",
