--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@howljs/calendar-kit": "^1.13.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -16,6 +17,7 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.1",
+    "@shopify/flash-list": "1.3.1",
     "axios": "^1.2.2",
     "expo": "~47.0.9",
     "expo-av": "~13.0.3",
