--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@howljs/calendar-kit": "^1.13.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.5.1",
