find new lib: react-native-big-calendar

--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -30,6 +30,7 @@
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-animatable": "^1.3.3",
+    "react-native-big-calendar": "^3.4.1",
     "react-native-calendars": "^1.1293.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.3.1",
