--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.3.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
