--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -34,6 +34,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-big-calendar": "^3.4.1",
     "react-native-calendars": "^1.1293.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.3.1",
     "react-native-phone-number-input": "^2.1.0",
