--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -29,10 +29,12 @@
     "firebase": "^9.6.11",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "path-js": "^1.0.1",
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-animatable": "^1.3.3",
     "react-native-big-calendar": "^3.4.1",
+    "react-native-calendar-heatmap": "^0.2.4",
     "react-native-calendars": "^1.1293.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.8.0",
@@ -41,6 +43,7 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
+    "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.23.1",
     "react-redux": "^8.0.5",
