--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -48,7 +48,9 @@
     "react-native-webview": "11.23.1",
     "react-redux": "^8.0.5",
     "react-router-native": "^6.6.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "expo-notifications": "~0.17.0",
+    "expo-device": "~5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
