--- a/task_obey/package.json
+++ b/task_obey/package.json
@@ -24,7 +24,9 @@
     "dayjs": "^1.11.7",
     "expo": "~47.0.9",
     "expo-av": "~13.0.3",
+    "expo-device": "~5.0.0",
     "expo-firebase-recaptcha": "^2.3.1",
+    "expo-notifications": "~0.17.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.11",
     "jwt-decode": "^3.1.2",
@@ -37,6 +39,7 @@
     "react-native-calendar-heatmap": "^0.2.4",
     "react-native-calendars": "^1.1293.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-flexi-radio-button": "^0.2.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.3.1",
     "react-native-phone-number-input": "^2.1.0",
@@ -48,9 +51,7 @@
     "react-native-webview": "11.23.1",
     "react-redux": "^8.0.5",
     "react-router-native": "^6.6.1",
-    "redux-persist": "^6.0.0",
-    "expo-notifications": "~0.17.0",
-    "expo-device": "~5.0.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
